fix: use gap and grid-gap instead of margins

--- a/apps/roadmap/src/app/map/map.component.scss
+++ b/apps/roadmap/src/app/map/map.component.scss
@@ -15,7 +15,7 @@
     'right-side sub-right';
   grid-template-columns: 1fr 1fr;
 
-  grid-gap: 0.25rem;
+  grid-gap: 2.5rem;
   margin-left: 1vw;
   margin-right: 1vw;
 
@@ -33,6 +33,7 @@
   }
 
   &__side-elements {
+    gap: 2.5rem;
     margin: 0 auto;
     position: relative;
     height: 100%;
@@ -117,7 +118,6 @@
   padding: 1rem 1.5rem;
   text-align: center;
   font-size: 1.5rem;
-  margin: 2.5rem 0;
   position: relative;
   width: 35vw;
   will-change: border, background;
